# lncpp

./: CMakeLists.txt  README.md  compile_commands.json
src/: axis.hpp  box.cpp  box.hpp  btree.cpp  btree.hpp  cube.cpp  cube.hpp  filter.cpp  filter.hpp  hit.cpp  hit.hpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  outline_sphere.cpp  outline_sphere.hpp  path.cpp  path.hpp  paths.cpp  paths.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  util.cpp  util.hpp  vec3.hpp  vector.cpp  vector.hpp
test/: beads.cpp  cube.cpp  cube2.cpp  ln_test.cpp  mesh.cpp  outline.cpp  skyscrapers.cpp  triangle.cpp  triangles.cpp
